Don't call CalculateContentBottom inside PR_MAX(), which evaluates its arguments twice.  (Bug 511482)  r=dbaron