layout/base/nsLayoutUtils.cpp
@@ -2650,11 +2650,11 @@ CalculateBlockContentBottom(nsBlockFrame* aFrame)
     if (line->IsBlock()) {
       nsIFrame* child = line->mFirstChild;
       nscoord offset = child->GetRect().y - child->GetRelativeOffset().y;
-      contentBottom = PR_MAX(contentBottom,
+      contentBottom = NS_MAX(contentBottom,
                         nsLayoutUtils::CalculateContentBottom(child) + offset);
     }
     else {
-      contentBottom = PR_MAX(contentBottom, line->mBounds.YMost());
+      contentBottom = NS_MAX(contentBottom, line->mBounds.YMost());
     }
   }
   return contentBottom;
@@ -2673,7 +2673,7 @@ nsLayoutUtils::CalculateContentBottom(nsIFrame* aFrame)
     PRIntn nextListID = 0;
     do {
       if (childList == nsnull && blockFrame) {
-        contentBottom = PR_MAX(contentBottom, CalculateBlockContentBottom(blockFrame));
+        contentBottom = NS_MAX(contentBottom, CalculateBlockContentBottom(blockFrame));
       }
       else if (childList != nsGkAtoms::overflowList &&
                childList != nsGkAtoms::excessOverflowContainersList &&
@@ -2683,7 +2683,7 @@ nsLayoutUtils::CalculateContentBottom(nsIFrame* aFrame)
             child; child = child->GetNextSibling())
         {
           nscoord offset = child->GetRect().y - child->GetRelativeOffset().y;
-          contentBottom = PR_MAX(contentBottom,
+          contentBottom = NS_MAX(contentBottom,
                                  CalculateContentBottom(child) + offset);
         }
       }
